--- a/config.json
+++ b/config.json
@@ -2,6 +2,12 @@
   "track_id": "zig",
   "language": "Zig",
   "active": false,
+  "status": {
+    "concept_exercises": false,
+    "test_runner": false,
+    "representer": false,
+    "analyzer": false
+  },
   "blurb": "",
   "version": 3,
   "ignore_pattern": "[Ee]xample",
