Add grains into practice exercises

--- a/config.json
+++ b/config.json
@@ -106,6 +106,26 @@
           "functions"
         ],
         "difficulty": 1
+      },
+      {
+        "uuid": "dff58791-4373-46ec-933a-ea27a28b4486",
+        "slug": "grains",
+        "name": "Grains",
+        "practices": [
+          "bitwise-operations",
+          "builtin-functions",
+          "conditionals",
+          "error-sets",
+          "functions"
+        ],
+        "prerequisites": [
+          "bitwise-operations",
+          "builtin-functions",
+          "conditionals",
+          "error-sets",
+          "functions"
+        ],
+        "difficulty": 1
       }
     ]
   },
