--- a/config.json
+++ b/config.json
@@ -174,6 +174,26 @@
           "structs"
         ],
         "difficulty": 1
+      },
+      {
+        "uuid": "bd72bb30-583f-494c-818d-4394703293a1",
+        "slug": "hamming",
+        "name": "Hamming",
+        "topics": [
+          "conditionals",
+          "control-flow",
+          "error-sets",
+          "functions",
+          "slices"
+        ],
+        "prerequisites": [
+          "conditionals",
+          "control-flow",
+          "error-sets",
+          "functions",
+          "slices"
+        ],
+        "difficulty": 1
       }
     ]
   },
