Fix hamming practices key and values

--- a/config.json
+++ b/config.json
@@ -179,19 +179,21 @@
         "uuid": "bd72bb30-583f-494c-818d-4394703293a1",
         "slug": "hamming",
         "name": "Hamming",
-        "topics": [
+        "practices": [
           "conditionals",
           "control-flow",
           "error-sets",
           "functions",
-          "slices"
+          "slices",
+          "type-coercion"
         ],
         "prerequisites": [
           "conditionals",
           "control-flow",
           "error-sets",
           "functions",
-          "slices"
+          "slices",
+          "type-coercion"
         ],
         "difficulty": 1
       }
