Add hamming practice exercise (#36)
* Add instructions.md for hamming

* Add .meta/ files for hamming

* Add solution file for hamming

* Add unit tests file for hamming

* Add hamming into practice exercises

* Fix hamming practices key and values

--- a/config.json
+++ b/config.json
@@ -174,6 +174,28 @@
           "structs"
         ],
         "difficulty": 1
+      },
+      {
+        "uuid": "bd72bb30-583f-494c-818d-4394703293a1",
+        "slug": "hamming",
+        "name": "Hamming",
+        "practices": [
+          "conditionals",
+          "control-flow",
+          "error-sets",
+          "functions",
+          "slices",
+          "type-coercion"
+        ],
+        "prerequisites": [
+          "conditionals",
+          "control-flow",
+          "error-sets",
+          "functions",
+          "slices",
+          "type-coercion"
+        ],
+        "difficulty": 1
       }
     ]
   },
