Add type-coercion to exercise's pracs and prereqs

--- a/config.json
+++ b/config.json
@@ -328,14 +328,16 @@
           "error-sets",
           "generics",
           "functions",
-          "optionals"
+          "optionals",
+          "type-coercion"
         ],
         "prerequisites": [
           "control-flow",
           "error-sets",
           "generics",
           "functions",
-          "optionals"
+          "optionals",
+          "type-coercion"
         ],
         "difficulty": 1
       }
