Flatten authors and contributors array
The authors and contributors of exercises are stored in an array in the exercises' `.meta/config.json` files.
We used to have separate fields for the GitHub- and Exercism username of the user.
As we're only using the GitHub username, we've flatten the `authors` and `contributors` array to an array of strings representing the GitHub usernames.

See https://github.com/exercism/docs/pull/90/files

--- a/exercises/practice/collatz-conjecture/.meta/config.json
+++ b/exercises/practice/collatz-conjecture/.meta/config.json
@@ -1,10 +1,7 @@
 {
   "blurb": "Calculate the number of steps to reach 1 using the Collatz conjecture",
   "authors": [
-    {
-      "github_username": "massivelivefun",
-      "exercism_username": "massivelivefun"
-    }
+    "massivelivefun"
   ],
   "files": {
     "example": [
