--- a/exercises/practice/triangle/.meta/config.json
+++ b/exercises/practice/triangle/.meta/config.json
@@ -2,6 +2,10 @@
   "authors": [
     "massivelivefun"
   ],
+  "contributors": [
+    "ErikSchierboom",
+    "iHiD"
+  ],
   "blurb": "Determine if a triangle is equilateral, isosceles, or scalene.",
   "files": {
     "example": [
