--- a/exercises/practice/space-age/.meta/config.json
+++ b/exercises/practice/space-age/.meta/config.json
@@ -2,6 +2,10 @@
   "authors": [
     "massivelivefun"
   ],
+  "contributors": [
+    "ErikSchierboom",
+    "iHiD"
+  ],
   "blurb": "Given an age in seconds, calculate how old someone is in terms of a given planet's solar years.",
   "files": {
     "example": [
