--- a/config.json
+++ b/config.json
@@ -384,6 +384,28 @@
           "functions"
         ],
         "difficulty": 1
+      },
+      {
+        "uuid": "7b7db815-5e14-477e-8012-f7719561dd8f",
+        "slug": "proverb",
+        "name": "Proverb",
+        "practices": [
+          "allocators",
+          "conditionals",
+          "control-flow",
+          "error-sets",
+          "functions",
+          "slices"
+        ],
+        "prerequisites": [
+          "allocators",
+          "conditionals",
+          "control-flow",
+          "error-sets",
+          "functions",
+          "slices"
+        ],
+        "difficulty": 1
       }
     ]
   },
