--- a/config.json
+++ b/config.json
@@ -411,7 +411,7 @@
   "key_features": [
     {
       "title": "Simple",
-      "content": "Zig let's you focus on debugging your application rather than debugging your programming language knowledge.",
+      "content": "Zig lets you focus on debugging your application rather than debugging your programming language knowledge.",
       "icon": "easy"
     },
     {
