Update "Comptime" key feature
Getting it under 100 characters

--- a/config.json
+++ b/config.json
@@ -416,7 +416,7 @@
     },
     {
       "title": "Comptime",
-      "content": "Zig has a a fresh approach to metaprogramming based on compile-time code execution and lazy evaluation",
+      "content": "Zig has a fresh approach to metaprogramming based on compile-time code execution and lazy evaluation",
       "icon": "powerful"
     },
     {
