Update "Community" key feature
Getting it under 100 characters

--- a/config.json
+++ b/config.json
@@ -436,7 +436,7 @@
     },
     {
       "title": "Community",
-      "content": "The Zig community is decentralized and development is funded by the non-profit Zig Software Foundation.",
+      "content": "Zig's community is decentralized. Development is funded by the non-profit Zig Software Foundation.",
       "icon": "community"
     }
   ],
