--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,32 +7,17 @@ on:
 
 jobs:
   test-exercises:
-    name: Check exercises
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest]
+
+    name: Check exercises (${{ matrix.os }})
+    runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8
 
     - name: Install Zig
-      run: |
-        curl -o zig.tar.xz https://ziglang.org/download/0.8.1/zig-linux-x86_64-0.8.1.tar.xz
-        tar xJf zig.tar.xz
-        mkdir -p $HOME/bin
-        ln -s $(pwd)/zig-*/zig $HOME/bin
-    
-    - name: Test exercises
-      run: ./_test/run-tests.sh
-  test-exercises-mac:
-    name: Check exercises on mac
-    runs-on: macos-latest
-    steps:
-    - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8
+      run: ./.github/bin/install-zig.sh
 
-    - name: Install Zig
-      run: |
-        curl -o zig.tar.xz https://ziglang.org/download/0.8.1/zig-macos-x86_64-0.8.1.tar.xz
-        tar xJf zig.tar.xz
-        mkdir -p $HOME/bin
-        ln -s $(pwd)/zig-*/zig $HOME/bin
-    
     - name: Test exercises
       run: ./_test/run-tests.sh
