exercises: sync tests.toml description values

--- a/exercises/practice/hamming/.meta/tests.toml
+++ b/exercises/practice/hamming/.meta/tests.toml
@@ -45,7 +45,7 @@ include = false
 description = "disallow right empty strand"
 
 [920cd6e3-18f4-4143-b6b8-74270bb8f8a3]
-description = "disallow empty second strand"
+description = "disallow right empty strand"
 include = false
 
 [9ab9262f-3521-4191-81f5-0ed184a5aa89]
