--- a/exercises/practice/resistor-color/.meta/tests.toml
+++ b/exercises/practice/resistor-color/.meta/tests.toml
@@ -3,13 +3,13 @@
 # so comments can be added in a "comment" key.
 
 [49eb31c5-10a8-4180-9f7f-fea632ab87ef]
-description = "Black"
+description = "Color codes -> Black"
 
 [0a4df94b-92da-4579-a907-65040ce0b3fc]
-description = "White"
+description = "Color codes -> White"
 
 [5f81608d-f36f-4190-8084-f45116b6f380]
-description = "Orange"
+description = "Color codes -> Orange"
 
 [581d68fa-f968-4be2-9f9d-880f2fb73cf7]
 description = "Colors"
