config: set track to active
Closes: #21

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "language": "Zig",
   "slug": "zig",
-  "active": false,
+  "active": true,
   "status": {
     "concept_exercises": false,
     "test_runner": true,
