--- a/config.json
+++ b/config.json
@@ -18,6 +18,20 @@
   "test_runner": {
     "average_run_time": 5.0
   },
+  "files": {
+    "solution": [
+      "%{snake_slug}.zig"
+    ],
+    "test": [
+      "test_%{snake_slug}.zig"
+    ],
+    "example": [
+      ".meta/example.zig"
+    ],
+    "exemplar": [
+      ".meta/exemplar.zig"
+    ]
+  },
   "exercises": {
     "concept": [],
     "practice": [
