exercises(resistor-color-duo): remove test case for array of length 3
Closes: 202

--- a/config.json
+++ b/config.json
@@ -100,21 +100,13 @@
           "arrays",
           "builtin-functions",
           "enums",
-          "error-sets",
-          "functions",
-          "pointers",
-          "slices",
-          "type-coercion"
+          "functions"
         ],
         "prerequisites": [
           "arrays",
           "builtin-functions",
           "enums",
-          "error-sets",
-          "functions",
-          "pointers",
-          "slices",
-          "type-coercion"
+          "functions"
         ],
         "difficulty": 1
       },
