--- a/exercises/practice/resistor-color-duo/.meta/tests.toml
+++ b/exercises/practice/resistor-color-duo/.meta/tests.toml
@@ -26,6 +26,7 @@ description = "Orange and orange"
 
 [0c4fb44f-db7c-4d03-afa8-054350f156a8]
 description = "Ignore additional colors"
+include = false
 
 [4a8ceec5-0ab4-4904-88a4-daf953a5e818]
 description = "Black and brown, one-digit"
