exercises(collatz-conjecture): remove test for negative number

--- a/exercises/practice/collatz-conjecture/.meta/tests.toml
+++ b/exercises/practice/collatz-conjecture/.meta/tests.toml
@@ -36,3 +36,4 @@ include = false
 [ec11f479-56bc-47fd-a434-bcd7a31a7a2e]
 description = "negative value is an error"
 reimplements = "c6c795bf-a288-45e9-86a1-841359ad426d"
+include = false
