--- a/exercises/practice/queen-attack/.meta/config.json
+++ b/exercises/practice/queen-attack/.meta/config.json
@@ -2,6 +2,9 @@
   "authors": [
     "massivelivefun"
   ],
+  "contributors": [
+    "ee7"
+  ],
   "files": {
     "solution": [
       "queen_attack.zig"
