.github, bin: remove .sh extension from scripts
Be consistent with `bin/fetch-configlet`.

Rationale from the Google Shell Style Guide [1]:

    Executables should have no extension (strongly preferred) or a `.sh`
    extension. Libraries must have a `.sh` extension and should not be
    executable.

    It is not necessary to know what language a program is written in
    when executing it and shell doesn’t require an extension so we
    prefer not to use one for executables.

    However, for libraries it’s important to know what language it is
    and sometimes there’s a need to have similar libraries in different
    languages. This allows library files with identical purposes but
    different languages to be identically named except for the
    language-specific suffix.

Closes: #232

[1] https://google.github.io/styleguide/shellguide.html#s2.1-file-extensions

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,7 +17,7 @@ jobs:
     - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
 
     - name: Install Zig
-      run: ./.github/bin/install-zig.sh
+      run: ./.github/bin/install-zig
 
     - name: Test exercises
-      run: ./bin/run-tests.sh
+      run: ./bin/run-tests
