--- a/.github/workflows/zig-fmt.yml
+++ b/.github/workflows/zig-fmt.yml
@@ -10,7 +10,7 @@ jobs:
       uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
 
     - name: Install Zig
-      run: ./.github/bin/install-zig.sh
+      run: ./.github/bin/install-zig
 
     - name: Check that Zig code is formatted
       run: |
