exercises(triangle): return optional, not error union
We simplified the error set to contain only one error [1], so there's an
argument to use an optional instead.

[1] 4a4665a4dbeb exercises(triangle): simplify error set (2023-03-12)

Refs: #229

--- a/config.json
+++ b/config.json
@@ -264,6 +264,7 @@
           "error-sets",
           "functions",
           "methods",
+          "optionals",
           "structs"
         ],
         "prerequisites": [
@@ -272,6 +273,7 @@
           "error-sets",
           "functions",
           "methods",
+          "optionals",
           "structs"
         ],
         "difficulty": 1
