exercises(binary-search): return an optional, not an error union
Before this commit, `binary-search` required the user to return an error
when the array of input items:

- was empty
- or did not contain the target

Return an optional instead, like `std.sort.binarySearch` [1]. Now, an
empty input array is just another case of "value not found".

Also rename `buffer` to `items` for similar consistency with
upstream [1], and to reserve the name `buffer` for a variable that is
mutated by a function.

[1] https://github.com/ziglang/zig/blob/adc6dec26b8b/lib/std/sort.zig#L10

Refs: #229

--- a/config.json
+++ b/config.json
@@ -384,16 +384,16 @@
         "name": "Binary Search",
         "practices": [
           "control-flow",
-          "error-sets",
           "generics",
           "functions",
+          "optionals",
           "type-coercion"
         ],
         "prerequisites": [
           "control-flow",
-          "error-sets",
           "generics",
           "functions",
+          "optionals",
           "type-coercion"
         ],
         "difficulty": 1
