exercises(allergies): implement (#262)
We could implement this exercise via a `packed struct`, but I think the
bit set implementation is a more natural fit for now, and has good
educational value.

An `EnumSet` is backed by a `StaticBitSet` [1], which is an
`IntegerBitSet` when the number of values is less than or equal to the
bit size of `usize` [2]:

    /// Returns the optimal static bit set type for the specified number
    /// of elements.  The returned type will perform no allocations,
    /// can be copied by value, and does not require deinitialization.
    /// Both possible implementations fulfill the same interface.
    pub fn StaticBitSet(comptime size: usize) type {
        if (size <= @bitSizeOf(usize)) {
            return IntegerBitSet(size);
        } else {
            return ArrayBitSet(usize, size);
        }
    }

In the tests for `initAllergenSet`, use `count` and `contains` to get
better messages on test failure (compared to using `testing.expectEqual`
with two `EnumSet`s).

[1] https://github.com/ziglang/zig/blob/0.10.1/lib/std/enums.zig#L365-L370
[2] https://github.com/ziglang/zig/blob/0.10.1/lib/std/bit_set.zig#L37-L47

--- a/config.json
+++ b/config.json
@@ -467,6 +467,20 @@
         "difficulty": 1
       },
       {
+        "uuid": "4c13a4fb-d673-4a2c-8e70-54173f52d98c",
+        "slug": "allergies",
+        "name": "Allergies",
+        "practices": [
+          "bitwise-operations",
+          "enums"
+        ],
+        "prerequisites": [
+          "bitwise-operations",
+          "enums"
+        ],
+        "difficulty": 1
+      },
+      {
         "uuid": "47ef24ce-745a-4dfe-a7a8-370d8a324d52",
         "slug": "linked-list",
         "name": "Linked List",
