exercises(luhn): implement (#181)

--- a/config.json
+++ b/config.json
@@ -251,6 +251,22 @@
         "difficulty": 1
       },
       {
+        "uuid": "ca72ff14-470d-4679-ad36-82ea9d2890bc",
+        "slug": "luhn",
+        "name": "Luhn",
+        "practices": [
+          "integers",
+          "math",
+          "strings"
+        ],
+        "prerequisites": [
+          "integers",
+          "math",
+          "strings"
+        ],
+        "difficulty": 1
+      },
+      {
         "uuid": "3819c81e-db22-4aac-b745-5eec450b7b4d",
         "slug": "darts",
         "name": "Darts",
