Use `jq` to format `config.json`

--- a/config.json
+++ b/config.json
@@ -44,8 +44,7 @@
           "slices",
           "type-coercion"
         ],
-        "prerequisites": [
-        ],
+        "prerequisites": [],
         "difficulty": 1
       },
       {
