config: raindrops: add practices/prereqs
Not currently consequential.

--- a/config.json
+++ b/config.json
@@ -510,9 +510,15 @@
         "slug": "raindrops",
         "name": "Raindrops",
         "practices": [
+          "integers",
+          "math",
+          "slices",
           "strings"
         ],
         "prerequisites": [
+          "integers",
+          "math",
+          "slices",
           "strings"
         ],
         "difficulty": 1
