.github: pin Ubuntu and macOS versions
These are the current stable versions [1].

[1] https://github.com/actions/runner-images/blob/d44b8a46e2e7/README.md#available-images

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,7 +9,7 @@ jobs:
   test-exercises:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-22.04, macos-12]
 
     name: Check exercises (${{ matrix.os }})
     runs-on: ${{ matrix.os }}
