exercises(sum-of-multiples): implement (#268)
This is one of the first exercises for which a user can reasonably use
a HashMap (as a set of integers). Put this exercise towards the end.

A u64 is sufficient for the maximum value of the sum of multiples when
the limit is a u32. The maximum sum of multiples occurs for

    const factors = [_]u32{1};
    const limit = 4_294_967_295 // the maximum value of a u32

and the sum of integers from 1 (inclusive) to n (exclusive) is

    n(n - 1) / 2

which is always less than n^2. So the sum from 1 to an integer less
than 2^32 is always less than 2^64.

--- a/config.json
+++ b/config.json
@@ -634,6 +634,22 @@
         "difficulty": 1
       },
       {
+        "uuid": "a9ba66ae-85d1-490e-a421-e2e35f90231e",
+        "slug": "sum-of-multiples",
+        "name": "Sum of Multiples",
+        "practices": [
+          "allocators",
+          "integers",
+          "math"
+        ],
+        "prerequisites": [
+          "allocators",
+          "integers",
+          "math"
+        ],
+        "difficulty": 1
+      },
+      {
         "uuid": "47ef24ce-745a-4dfe-a7a8-370d8a324d52",
         "slug": "linked-list",
         "name": "Linked List",
