exercises(yacht): implement (#270)
Note that Zig 0.11.0 [1] removed std.sort.sort [2].

[1] https://ziglang.org/download/0.11.0/release-notes.html
[2] https://github.com/ziglang/zig/commit/3db3cf77904e

--- a/config.json
+++ b/config.json
@@ -634,6 +634,22 @@
         "difficulty": 1
       },
       {
+        "uuid": "f73c7be1-ee3a-4fff-93f2-a8f5ab793ca1",
+        "slug": "yacht",
+        "name": "Yacht",
+        "practices": [
+          "arrays",
+          "enums",
+          "games"
+        ],
+        "prerequisites": [
+          "arrays",
+          "enums",
+          "games"
+        ],
+        "difficulty": 1
+      },
+      {
         "uuid": "a9ba66ae-85d1-490e-a421-e2e35f90231e",
         "slug": "sum-of-multiples",
         "name": "Sum of Multiples",
